sandbox/output
Hiker.java:12: error: incompatible types: String cannot be converted to String[]
        return sb.toString();
                          ^
Hiker.java:17: error: cannot find symbol
        String[] rs = split2(args).split(",");
                                  ^
  symbol:   method split(String)
  location: class String[]
2 errors
